[package]
name = "brush-interactive"
description = "Interactive layer of brush-shell"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
default = []
basic = ["dep:crossterm", "completion"]
completion = []
minimal = []
reedline = ["dep:reedline", "dep:nu-ansi-term", "completion"]

[lints]
workspace = true

[dependencies]
brush-parser = { version = "^0.3.0", path = "../brush-parser" }
brush-core = { version = "^0.4.0", path = "../brush-core" }
crossterm = { version = "0.29.0", features = ["serde"], optional = true }
indexmap = "2.12.0"
nu-ansi-term = { version = "0.50.3", optional = true }
reedline = { version = "0.44.0", optional = true }
thiserror = "2.0.17"
tracing = "0.1.41"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["term"] }

[target.'cfg(any(unix, windows))'.dependencies]
tokio = { version = "1.48.0", features = ["macros", "signal"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
