[package]
name = "brush-interactive"
description = "Interactive layer of brush-shell"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
default = []
basic = ["dep:crossterm", "completion"]
completion = []
minimal = []
reedline = ["dep:reedline", "dep:nu-ansi-term", "completion", "highlighting"]
highlighting = []

[lints]
workspace = true

[dependencies]
bon = "3.8.2"
brush-parser = { version = "^0.3.0", path = "../brush-parser" }
brush-core = { version = "^0.4.0", path = "../brush-core" }
crossterm = { version = "0.29.0", features = ["serde"], optional = true }
indexmap = "2.13.0"
nu-ansi-term = { version = "0.50.3", optional = true }
reedline = { version = "0.44.0", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt", "sync"] }
tracing = "0.1.44"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
