[package]
name = "brush-interactive"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
description = "Interactive layer of brush-shell"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false

[dependencies]
bon = "3.9.1"
brush-core = { path = "../brush-core", version = "^0.5.0" }
brush-parser = { path = "../brush-parser", version = "^0.4.0" }
crossterm = { version = "0.29.0", features = ["serde"], optional = true }
indexmap = "2.13.0"
nu-ansi-term = { version = "0.50.3", optional = true }
radix_trie = "0.3.0"
reedline = { version = "0.47.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "sync"] }
tracing = "0.1.44"

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["unstable"] }

[features]
default = []
basic = ["completion", "dep:crossterm"]
completion = []
highlighting = []
minimal = []
reedline = ["completion", "dep:nu-ansi-term", "dep:reedline", "highlighting"]

[lints]
workspace = true
