[package]
name = "brush-parser"
description = "POSIX/bash shell tokenizer and parsers (used by brush-shell)"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
bench = false

[features]
arbitrary = ["dep:arbitrary"]
debug-tracing = ["peg/trace"]
diagnostics = ["dep:miette"]
serde = ["dep:serde"]

[dependencies]
arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
bon = "3.8.1"
cached = "0.56.0"
indenter = "0.3.4"
miette = { version = "7.6.0", optional = true, default-features = false, features = [
    "derive",
] }
peg = "0.8.5"
serde = { version = "1.0.228", optional = true, features = ["derive", "rc"] }
thiserror = "2.0.17"
tracing = "0.1.43"
utf8-chars = "3.0.6"

[dev-dependencies]
anyhow = "1.0.100"
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = { version = "1.44.3", features = ["glob", "ron", "yaml"] }
miette = { version = "7.6.0", features = ["fancy"] }
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "parser"
harness = false

[[example]]
name = "miette"
required-features = ["diagnostics"]

[[example]]
name = "serde"
required-features = ["serde"]
