[package]
name = "brush-test-harness"
description = "Test harness library for brush shell integration tests"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
# Enable insta snapshot support
insta = ["dep:insta"]

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
descape = "3.0.0"
diff = "0.1.13"
glob = "0.3.3"
indent = "0.1.1"
insta = { version = "1.45.1", features = ["yaml"], optional = true }
junit-report = "0.8.3"
os-release = "0.1.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync"] }
version-compare = "0.2.1"
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
expectrl = "0.8.0"
nix = { version = "0.30.1", features = ["process"] }
