[package]
name = "brush"
description = "Rust-implemented shell focused on POSIX and bash compatibility"
version = "0.2.23"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "brush"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
brush-shell = { version = "^0.2.23", path = "../brush-shell" }
