[package]
name = "brush-cli"
description = "brush shell"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "brush"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.81"
brush-interactive-shell = { path = "../interactive-shell" }
brush-parser = { path = "../parser" }
brush-shell = { path = "../shell" }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.10.2"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
colored = "2.1.0"
descape = "1.1.2"
dir-cmp = "0.1.0"
expectrl = "0.7.1"
glob = "0.3.1"
indent = "0.1.1"
pathdiff = "0.2.1"
prettydiff = "0.6.4"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.0"
