[package]
name = "brush-cli"
description = "brush shell"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "brush"
path = "src/main.rs"
bench = false

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false

[lints]
workspace = true

[dependencies]
brush-interactive-shell = { path = "../interactive-shell" }
brush-parser = { path = "../parser" }
brush-shell = { path = "../shell" }
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
colored = "2.1.0"
descape = "1.1.2"
dir-cmp = "0.1.0"
expectrl = "0.7.1"
glob = "0.3.1"
indent = "0.1.1"
junit-report = "0.8.3"
pathdiff = "0.2.1"
prettydiff = { version = "0.7.0", default-features = false }
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.0"
