[package]
name = "brush-fuzz"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
description = "Fuzz tests for brush"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
bench = false
doc = false
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false

[[bin]]
bench = false
doc = false
name = "fuzz_arithmetic"
path = "fuzz_targets/fuzz_arithmetic.rs"
test = false

[dependencies]
anyhow = "1.0.102"
assert_cmd = "2.2.0"
libfuzzer-sys = "0.4"
tokio = { version = "1.52.1", features = ["rt"] }

[dependencies.brush-core]
path = "../brush-core"

[dependencies.brush-parser]
path = "../brush-parser"
features = ["arbitrary"]

[lints]
workspace = true
