[package]
name = "integration-tests"
description = "rush integration tests"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]

[dev-dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
colored = "2.0.4"
dir-diff = "0.3.2"
glob = "0.3.1"
serde = { version = "1.0.193", features = [ "derive" ] }
serde_yaml = "0.9.27"
