[package]
name = "brush-interactive-shell"
description = "Shell"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "interactive_shell"
bench = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.83"
brush-parser = { path = "../parser" }
brush-shell = { path = "../shell" }
rustyline = { git = "https://github.com/reubeno/rustyline", rev = "023a08093e9b8ff81f9d8e096e00a23e6e83167a", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [
    "macros",
    "signal",
] }
tracing = "0.1.40"
