[package]
name = "brush-parser"
description = "Parser"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "parser"

[lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
if_same_then_else = "allow"

[dependencies]
anyhow = "1.0.80"
indenter = "0.3.3"
log = "0.4.20"
peg = "0.8.2"
thiserror = "1.0.57"
utf8-chars = "3.0.2"

[dev-dependencies]
assert_matches = "1.5.0"
