[package]
name = "brush-shell"
description = "brush Shell"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "shell"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.81"
async-recursion = "1.1.0"
async-trait = "0.1.77"
brush-parser = { path = "../parser" }
clap = { version = "4.5.2", features = ["derive"] }
exec = "0.3.1"
faccess = "0.2.4"
futures = "0.3.30"
glob = "0.3.1"
hostname = "0.3.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
nix = { version = "0.28.0", features = ["fs"] }
rand = "0.8.5"
regex = "1.10.3"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "signal",
] }
tokio-macros = "2.2.0"
tokio-command-fds = "0.2.1"
uzers = "0.11.3"
