[package]
name = "brush-shell"
description = "brush Shell"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "shell"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.81"
async-recursion = "1.1.0"
async-trait = "0.1.79"
brush-parser = { path = "../parser" }
clap = { version = "4.5.4", features = ["derive"] }
exec = "0.3.1"
faccess = "0.2.4"
futures = "0.3.30"
glob = "0.3.1"
hostname = "0.4.0"
indexmap = "2.2.6"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
nix = { version = "0.28.0", features = ["fs"] }
rand = "0.8.5"
regex = "1.10.4"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tokio-macros = "2.2.0"
tokio-command-fds = "0.2.1"
uzers = "0.11.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "shell"
harness = false
