[package]
name = "brush-shell"
description = "brush Shell"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "shell"
bench = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.82"
async-recursion = "1.1.0"
async-trait = "0.1.80"
brush-parser = { path = "../parser" }
clap = { version = "4.5.4", features = ["derive"] }
faccess = "0.2.4"
fancy-regex = "0.13.0"
futures = "0.3.30"
hostname = "0.4.0"
indexmap = "2.2.6"
itertools = "0.13.0"
lazy_static = "1.4.0"
os_pipe = "1.1.5"
rand = "0.8.5"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tokio-macros = "2.2.0"
tracing = "0.1.40"

[target.'cfg(windows)'.dependencies]
homedir = "0.2.1"
whoami = "1.5.1"

[target.'cfg(unix)'.dependencies]
exec = "0.3.1"
nix = { version = "0.28.0", features = ["fs", "process", "signal", "user"] }
tokio-command-fds = "0.2.1"
uzers = "0.12.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "shell"
harness = false
