[package]
name = "tuish"
description = "TUI-based interactive shell built on brush"
version = "0.1.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "tuish"
path = "src/main.rs"
bench = false

[lints]
workspace = true

[dependencies]
brush-builtins = { version = "^0.1.0", path = "../brush-builtins" }
brush-core = { version = "^0.4.0", path = "../brush-core" }
brush-interactive = { version = "^0.3.0", path = "../brush-interactive" }
ratatui = "0.29.0"
tui-term = { version = "0.2.0", features = ["vt100"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
libc = "0.2"
vt100 = "0.15.2"
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "io-util",
    "time",
] }
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
bytes = "1.10.0"
