[package]
name = "xtask"
publish = false
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"
bench = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
brush-shell = { version = "^0.3.0", path = "../brush-shell" }
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
clap_mangen = "0.2.31"
clap-markdown = "0.1.5"
