[package]
name = "xtask"
publish = false
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"
bench = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
brush-shell = { version = "^0.3.0", path = "../brush-shell", features = [
    "schema",
] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
clap_mangen = "0.3.0"
clap-markdown = "0.1.5"
schemars = "1.2.1"
serde_json = "1.0.149"
xshell = "0.2.7"
tempfile = "3.27.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"
pty-process = "0.5.3"
