[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
bench = false
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
brush-shell = { path = "../brush-shell", version = "^0.4.0", features = [
  "schema",
] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
clap_mangen = "0.3.0"
clap-markdown = "0.1.5"
num_cpus = "1.17.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
xshell = "0.2.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"
pty-process = "0.5.3"

[lints]
workspace = true
